# discord-rs

./: Cargo.toml  readme.md
src/: handler.rs  lib.rs  login.rs
src/client/: mod.rs
src/client/channels/: mod.rs  tests.rs
src/client/guilds/: mod.rs  tests.rs
src/client/users/: mod.rs  tests.rs
src/gateway/: event.rs  mod.rs  opcodes.rs  tests.rs
src/gateway/types/: connection_properties.rs  identify.rs  status.rs  update_presence.rs
src/models/: embeds.rs  emojis.rs  guilds.rs  login.rs  messages.rs  mod.rs  stickers.rs  threads.rs
src/models/gateway/: event.rs  mod.rs  opcodes.rs  status.rs  tests.rs  update_presence.rs  websocket_message.rs
src/models/gateway/events/: hello.rs  identify.rs  mod.rs
src/models/gateway/types/: identify.rs  mod.rs  update_presence.rs
src/models/login/: captcha.rs  details.rs  login_error.rs  login_response.rs  mfa.rs  mod.rs
src/types/: applications.rs  attachments.rs  channels.rs  embeds.rs  login.rs  messages.rs  mod.rs  post_message.rs  reactions.rs  roles.rs  users.rs
