[package]
name = "discord_rs"
version = "0.1.12"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1.19"
reqwest = { version = "0.12", features = ["json", "gzip", "brotli"] }
rpassword = "7.3"
log = "0.4"

[dev-dependencies]
tokio = {version = "1.37", features = ["macros"]}
dotenvy = "0.15"
