[package]
name = "discord_rs"
version = "0.2.3"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1.19"
serde_with = "3.12"
reqwest = { version = "0.12", features = ["json", "gzip", "brotli"] }
rpassword = "7.3"
log = "0.4"

tokio = {version = "1.37", features = ["macros"]}
tokio-tungstenite = {version = "0.26", features = ["native-tls"]}
futures-util = "0.3"
futures-channel = "0.3"

[dev-dependencies]
dotenvy = "0.15"
